Iterated on Advancement tab. Added Create button to header. Added special handling to ensure the actions column takes the minimum necessary width to accommodate all visible controls. Added editable condition on the action column. Moved header actions into a data-driven approach.
- [x] Finalize Background base version

--- a/src/scss/quadrone/tables.scss
+++ b/src/scss/quadrone/tables.scss
@@ -428,6 +428,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
   }
 
   .tidy-table-button {
